# gong-mo

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: update-ipo.yml
docs/: app.js  data.json  index.html  manifest.json  robots.txt  sitemap.xml  styles.css
src/gongmo/: __init__.py  config.py  main.py
src/gongmo/calendar/: __init__.py  auth.py  client.py
src/gongmo/collectors/: __init__.py  base.py  site38.py
src/gongmo/models/: __init__.py  ipo.py
src/gongmo/publisher/: __init__.py  github.py  og_image.py  static.py
src/gongmo/publisher/templates/: index.html.j2
tests/: test_collector.py
